obile phone menu not collapsing fix

--- a/perasis/static_files/css/buttons.css
+++ b/perasis/static_files/css/buttons.css
@@ -93,6 +93,7 @@ a:focus, a:hover {
 
 .btn.btn-white-blue{
   margin-top: 5px;
+  margin-bottom: 5px;
   margin-right: 5px;
   margin-left: 5px;
   border-radius: 0px;
